reshuffle image gallery and fix syntax for files to prevent break in shuffle algos

--- a/stylesheets/flickity.css
+++ b/stylesheets/flickity.css
@@ -124,13 +124,13 @@ http://flickity.metafizzy.co
 /* ---- previous/next buttons ---- */
 
 .flickity-prev-next-button {
-  width: 30px;
-  height: 30px;
+  width: 100px;
+  height: 100px;
   border-radius: 5px;
   background: #333;
 }
 .flickity-prev-next-button:hover {
-  background: #F90;
+  background: #334;
 }
 /* arrow color */
 .flickity-prev-next-button .arrow {
@@ -141,11 +141,10 @@ http://flickity.metafizzy.co
 }
 /* position outside */
 .flickity-prev-next-button.previous {
-  left: -40px;
+  float: left;
 }
 .flickity-prev-next-button.next {
-  right: -40px;
-}
+float: right;}
 
 /* ---- page dots ---- */
 
@@ -191,6 +190,10 @@ http://flickity.metafizzy.co
 
 
 /*joe images smaller*/
+
+.main-gallery {
+  max-width: 759px;
+}
 
 .main-gallery .gallery-cell img {
 
